<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/intro_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ubb.alexandrustoica.reporter.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameEditText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/name_label"
            android:padding="20dp"
            android:background="@android:color/background_light"
            android:layout_height="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="text|textAutoComplete"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/username_label"
            android:padding="20dp"
            android:background="@android:color/background_light"
            android:layout_height="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="text|textAutoComplete"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/email_label"
            android:padding="20dp"
            android:background="@android:color/background_light"
            android:layout_height="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine|textEmailAddress"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/password_label"
            android:padding="20dp"
            android:background="@android:color/background_light"
            android:layout_height="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="textPassword|textVisiblePassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/password_label"
            android:padding="20dp"
            android:background="@android:color/background_light"
            android:layout_height="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="textPassword|textVisiblePassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onRegisterButtonClick"
            android:text="@string/register_button_text"
            android:transitionName="registerButtonTransition"
            android:textColor="@android:color/background_light" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
